fix padding issue with https://github.com/sagemathinc/smc/pull/861, which was maybe tested with no scrollbar

--- a/src/smc-webapp/_console.sass
+++ b/src/smc-webapp/_console.sass
@@ -42,6 +42,7 @@
   font-family: droid-sans-mono
   padding: 1px
   margin: 0px
+  padding-right: 10px;  /* account for fake scrollbar -- should be same width as salvus-console-scrollbar */
   white-space: nowrap
   /* critical at least for firefox and IE */
 
